--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -119,7 +119,7 @@
     },
     "buttons": {
         "OnOffMusic": {
-            "pin": 98,
+            "pin": 99,
             "reversed": false,
             "active": false,
             "action": [
@@ -136,7 +136,6 @@
             "pin": 99,
             "reversed": false,
             "active": false,
-            "is_on_off_raspi": true,
             "action": [
                 {
                     "apply_state": [
@@ -145,17 +144,12 @@
                     "action_type": 0
                 }
             ],
-            "frequency": {
-                "pos": null,
-                "musicList": null
-            },
-            "led": 0
+            "is_on_off_raspi": true
         },
         "changeSpeaker": {
             "pin": 99,
             "reversed": false,
             "active": false,
-            "is_change_speaker": true,
             "action": [
                 {
                     "apply_state": [
@@ -164,11 +158,7 @@
                     "action_type": 99
                 }
             ],
-            "frequency": {
-                "pos": null,
-                "musicList": null
-            },
-            "led": 0
+            "is_change_speaker": true
         },
         "Lang": {
             "pin": 13,
