Only add active analog devices

--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -72,7 +72,7 @@
                 "max": 26000,
                 "min_final": -20,
                 "max_final": 20,
-                "on": true,
+                "on": false,
                 "is_volume": false,
                 "is_frequency": false,
                 "is_equalizer": true,
@@ -95,7 +95,7 @@
                 "max": 26000,
                 "min_final": -20,
                 "max_final": 20,
-                "on": true,
+                "on": false,
                 "is_volume": false,
                 "is_frequency": false,
                 "is_equalizer": true,
