--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -7,7 +7,7 @@
             14,
             5
         ],
-        "output_pin": 15
+        "att_comm_pin": 15
     },
     "audio": {
         "fm_module": {
