--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -129,14 +129,20 @@
             "pin": 99,
             "reversed": false,
             "active": false,
-            "action": [
-                {
+            "action": {
+                "0": {
                     "apply_state": [
-                        1
+                        1,
+                        0,
+                        2
                     ],
-                    "action_type": 1
+                    "action_type": 3
+                },
+                "1": {
+                    "action_type": 99,
+                    "apply_state": []
                 }
-            ],
+            },
             "frequency": {
                 "pos": null,
                 "musicList": null
